<resources>
    <string name="app_name">Tenneco App</string>
    <string name="text_slogan">Cleaner, quieter, smoother, safer</string>
    <string name="text_sub_slogan_1">Pioneering global ideas for cleaner air and smoother, quieter and safer transportation.</string>
    <string name="sign_up">Sign Up</string>
    <string name="footer">www.tenneco.com</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an Account? \<b><u>Sign Up</u></b> </string>
    <string name="login_email_empty">The Email cannot be empty!</string>
    <string name="login_psw_empty">Password cannot be empty!</string>
    <string name="login_email_or_psw_incorrect">Incorrect E-mail or password, please available your information and try again!</string>
    <string name="login_email_invalid">Email not valid!</string>
    <string name="login_short_psw">Password must be larger than 6 characters!</string>
    <string name="login_rest_psw">We\'ve sent you an email with a link to reset your password:</string>
    <string name="register_email_already">Email already registered, sign in!</string>
    <string name="regiter_first_name">Introduce your first name!</string>
    <string name="register_last_name_empty">Introduce your last name</string>
    <string name="register_something_wrong">Sorry, something went wrong, please try again</string>
    <string name="i_have_an_account_sing_in">I already have an account, \<b><u>Sign In</u></b></string>
    <string name="sign_out">Sign Out</string>
    <string name="bold_production"><b>Production</b></string>
    <string name="bold_users"><b>Users</b></string>
    <string name="bold_configuration"><b>Configuration</b></string>
    <string name="production">Production</string>
    <string name="users">Users</string>
    <string name="configuration">Configuration</string>
    <string name="shift">Shift</string>
    <string name="target">Target</string>
    <string name="add_time">Time</string>
    <string name="add_target">Target</string>
    <string name="add_cumulative_planned">Cumulative Planned</string>
    <string name="add_1st_shift">1st Shift</string>
    <string name="add_separator">-</string>
    <string name="add_01_30">01:30</string>
    <string name="add_02_30">02:30</string>
    <string name="add_03_30">03:30</string>
    <string name="add_04_30">04:30</string>
    <string name="add_05_30">05:30</string>
    <string name="add_06_30">06:30</string>
    <string name="add_07_30">07:30</string>
    <string name="add_08_30">08:30</string>
    <string name="add_09_30">09:30</string>
    <string name="add_10_30">10:30</string>
    <string name="add_11_30">11:30</string>
    <string name="add_12_30">12:30</string>
    <string name="add_t_20">20</string>
    <string name="add_t_29">29</string>
    <string name="add_t_39">39</string>
    <string name="add_t_68">68</string>
    <string name="add_t_97">97</string>
    <string name="add_t_136">136</string>
    <string name="add_t_175">175</string>
    <string name="add_t_195">195</string>
    <string name="add_t_234">234</string>
    <string name="add_t_273">273</string>
    <string name="add_2nd_shift">2nd Shift</string>
    <string name="add_3rd_shift">3rd Shift</string>
    <string name="add_name_402">402 - Production Line</string>
    <string name="add_edit_production_line">Edit Production line</string>
    <string name="save">Save</string>
    <string name="main_hourly_production">Hourly Production</string>
    <string name="main_select_one_production_line">Select one production line:</string>
    <string name="main_come_back_later">There are no Production Lines scheduled for today, please come back later.</string>
    <string name="main_plants_come_back_later">There are no Plants available for today, please come back later.</string>
    <string name="line_shift">Shift</string>
    <string name="line_actual">Actual</string>
    <string name="line_1st">1st</string>
    <string name="line_2nd">2nd</string>
    <string name="line_3rd">3rd</string>
    <string name="daily_actuals">Actuals</string>
    <string name="daily_variance">Variance</string>
    <string name="daily_cumulative_total">Cumulative Total</string>
    <string name="daily_comments_problems">Comments/Problems</string>
    <string name="daily_owner">Owner</string>
    <string name="daily_date">Date</string>
    <string name="team_performance_board">Team Performance Board</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_comments_and_actions">Comments and Actions</string>
    <string name="star_hour">Introduce start hour!</string>
    <string name="end_hour">Introduce end hour!</string>
    <string name="error_target">Introduce Target!</string>
    <string name="add_name">Name:</string>
    <string name="production_lines">Production Lines</string>
    <string name="employees">Operators</string>
    <string name="emails">Emails</string>
    <string name="employee_introduce_some_information_here">Introduce some information here</string>
    <string name="employee_information">Information:</string>
    <string name="employee_full_name">Operator full name</string>
    <string name="employee_a_full_name">Full Name:</string>
    <string name="add_select_employees">Select Employees</string>
    <string name="shift_report">Shift Report</string>
    <string name="add_new_position">Operator Positions</string>
    <string name="add_robot_1">Robot OPERATOR 1</string>
    <string name="add_robot_2">Robot OPERATOR 2</string>
    <string name="add_manual_weld">Manual weld / repair</string>
    <string name="add_gauge_test">Gauge/Leak test</string>
    <string name="add_add">Add</string>
    <string name="add_list_of_employees">List of Operators</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete </string>
    <string name="add_position_name">Position Name:</string>
    <string name="employee_list">Operators List</string>
    <string name="add_actual">Actual</string>
    <string name="daily_reject_event">Reject Event</string>
    <string name="daily_leak_failure_counter">Leak Failure Counter</string>
    <string name="daily_downtime">Downtime</string>
    <string name="daily_end_3rd_shift">End 3rd Shift</string>
    <string name="dailly_end_2nd_shift">End 2nd Shift</string>
    <string name="daily_end_1st_shift">End 1st Shift</string>
    <string name="daily_report_hour">Report Hour</string>
    <string name="end_shift">End Shift</string>
    <string name="warning_end_shift">Once you end the shift, you will not be able to edit its values.</string>
    <string name="select_operators">Select Operators:</string>
    <string name="add_downtime">Downtime</string>
    <string name="reject_event">Rejects Event</string>
    <string name="downtime_zone">Zone</string>
    <string name="downtime_location">Location</string>
    <string name="downtime_reason">Reason</string>
    <string name="start_downtime">Start Downtime</string>
    <string name="end_downtime">End Downtime</string>
    <string name="downtime_end_time">End Time:</string>
    <string name="emails_list_of_emails_to_notify">List of Emails to notify</string>
    <string name="email_introduce_contact_full_name">Introduce full name</string>
    <string name="type_of_user">Type of user:</string>
    <string name="available">Available</string>
    <string name="preview_lists">Preview Lists</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="start_shift">Start Shift</string>
    <string name="start_1st_shift">Start 1st Shift</string>
    <string name="star_2nd_shift">Start 2nd Shift</string>
    <string name="start_3rd_shift">Start 3rd Shift</string>
    <string name="shift_leak_failure">Leak Failure</string>
    <string name="send_email">Send Email</string>
    <string name="ftq_over_10_escalation_and_actions">FTQ over 10% Escalation and Actions</string>
    <string name="please_write_here_the_actions_taken_to_solve_ftq_leak_issues_faced_on_current_shift">Please write here the actions taken to solve FTQ Leak issues faced on current shift.</string>
    <string name="select">Select</string>
    <string name="group_leads">Group Leaders</string>
    <string name="team_leaders">Team Leaders</string>
    <string name="add_introduce_cell_password">Introduce cell password</string>
    <string name="title_activity_plants">PlantsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="plants">Plants</string>
    <string name="main_plants_on">Select one Plant:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="downtime">Downtime</string>
    <string name="notifications">Notifications</string>
    <string name="plant_code_">Code:</string>
    <string name="introduce_plant_code">Plant Code</string>
    <string name="introduce_plant_name">Plant Name</string>
    <string name="introduce_plant_address">Address</string>
    <string name="address">Address</string>
    <string name="introduce_plant_password">Password</string>
    <string name="edit_plant">Edit Plant</string>
    <string name="list_of_numbers_to_notify_sms">List of Numbers to notify (SMS)</string>
    <string name="list_name">List Name:</string>
    <string name="list_name_">List Name</string>
    <string name="send_sms">Send SMS</string>
    <string name="rejects_report">Rejects Report</string>
    <string name="report_reject">Report Reject</string>
    <string name="title_activity_config_line">ConfigLineActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="addresses">Please select an Email List, this cannot be empty.</string>
    <string name="select_list">Select List</string>
    <string name="leak_ftq">Leak FTQ</string>
    <string name="_1st_scrap_event">1st Reject Event</string>
    <string name="_2nd_scrap_event">2nd Reject Event</string>
    <string name="next_scrap_events">Next Reject Events</string>
    <string name="line_report">Line Report</string>
    <string name="select_product">Select Product</string>
    <string name="add_product">Add Product</string>
    <string name="ftqs">FTQs</string>
    <string name="product">Product</string>
    <string name="daily_report">Daily Report</string>
    <string name="subject_">Subject:</string>
    <string name="subject">Subject</string>
    <string name="body_">Body:</string>
    <string name="body">Body</string>
    <string name="email_templates">Email Templates</string>
    <string name="title_activity_templates">TemplatesActivity</string>
    <string name="rejects">Rejects</string>
    <string name="report">Report</string>
    <string name="please_take_inmidiate_action">Please take immediate action</string>
    <string name="downtime_subject">is in DOWNTIME due to :</string>
    <string name="this_is_a_notification_that">This is a notification that</string>
    <string name="line_name_is_in_downtime">Line Name is in Downtime</string>
    <string name="line_name_is_back_to_production">Line Name is back to production</string>
    <string name="is_back_to_production"> is back to production</string>
    <string name="line_name">Line Name +</string>
    <string name="thank_you">Thank you.</string>
    <string name="this_is_the_report_of_all_the_lines_of_today">This is the report of all the lines of today</string>
    <string name="schedule_lines">Schedule Lines</string>
</resources>