<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginFragment"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:animateLayoutChanges="true"
    >


    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/tenneco_logo"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"

            android:text="@string/sign_in_to_your_account"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_rectangle"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/background_rectangle"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_your_password"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/tv_password"
            />

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Colored" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/don_t_have_an_account_sing_up"
            android:textColor="@color/colorBlue"
            android:layout_marginEnd="10dp"
            android:id="@+id/tv_register"
            />
    </LinearLayout>

</LinearLayout>