<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash.SplashFragment"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="10dp"
    android:animateLayoutChanges="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@drawable/tenneco_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_slogan"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sub_slogan_1"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/sign_in"
                android:id="@+id/bt_sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:id="@+id/bt_sign_up"
                android:theme="@style/AppTheme.Button"
                tools:ignore="ButtonStyle"
                />


        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/footer"
        />
</LinearLayout>