<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterFragment"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:animateLayoutChanges="true"
    >

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tenneco_logo"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:background="@drawable/background_rectangle"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:background="@drawable/background_rectangle"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_rectangle"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/background_rectangle"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Colored" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/i_have_an_account_sing_in"
            android:textColor="@color/colorBlue"
            android:layout_marginEnd="10dp"
            android:id="@+id/tv_login"
            />
    </LinearLayout>


</LinearLayout>