<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Templates.ReportTemplateFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/email_icon"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginBottom="50dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/daily_report"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_subject"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/subject"
                        android:inputType="textPersonName"
                        android:textSize="24sp"
                        android:background="@drawable/background_rectangle"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorHint"
                        android:textStyle="bold"
                        android:text="@string/daily_report"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="+ Date"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    />
                <EditText
                    android:id="@+id/et_body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/body"
                    android:inputType="textPersonName|textMultiLine"
                    android:textSize="24sp"
                    android:background="@drawable/background_rectangle"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint"
                    android:textStyle="bold"
                    android:text="@string/this_is_the_report_of_all_the_lines_of_today"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="+ Date"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/et_body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/body"
                    android:inputType="textMultiLine"
                    android:textSize="24sp"
                    android:background="@drawable/background_rectangle"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint"
                    android:textStyle="bold"
                    android:text="@string/thank_you"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>